# NexusShield

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
docs/: api_design.md  architecture.md  fraud_ring_taxonomy.md
src/nexusshield/data/: __init__.py  graph_builder.py  loaders.py  preprocess.py
src/nexusshield/inference/: __init__.py  scorer.py
src/nexusshield/pipelines/: __init__.py  build_graph_pipeline.py  train_eval_pipeline.py
src/nexusshield/training/: __init__.py  evaluation.py  train_link_prediction.py  train_node_classification.py
src/nexusshield/utils/: __init__.py  logging_utils.py  metrics.py  visualization.py
tests/: test_data.py  test_gnn.py  test_graph_builder.py  test_inference.py  test_training.py
