[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusshield-gnn"
version = "0.1.0"
description = "GNN-based fraud ring detection system for financial transactions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "NexusShield Team"}
]
keywords = ["gnn", "fraud-detection", "graph-neural-networks", "fraud-rings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # TODO: Add actual dependencies
    # "torch>=1.12.0",
    # "torch-geometric>=2.0.0",
    # "pandas>=1.3.0",
    # "numpy>=1.21.0",
    # "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # TODO: Add dev dependencies
    # "pytest>=7.0.0",
    # "black>=22.0.0",
    # "flake8>=4.0.0",
    # "mypy>=0.950",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nexusshield = ["py.typed"]

